--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">WEBSTUDIO</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
-            <a href="#">Studio</a>
+            <a href="">Studio</a>
           </li>
           <li>
-            <a href="#">Portfolio</a>
+            <a href="">Portfolio</a>
           </li>
           <li>
             <a href="">Contacts</a>
@@ -23,8 +23,14 @@
         </ul>
       </nav>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
       </address>
     </header>
     <main>
@@ -80,7 +86,7 @@
         </ul>
       </section>
       <section>
-        <h3>Our Team</h3>
+        <h2>Our Team</h2>
         <ul>
           <li>
             <img src="./images/mark.jpg" alt="Mark" width="264" />
@@ -106,7 +112,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
